qt/webengine/gen_qwebenginecontextmenudata.h

class QPoint;
class QUrl;
class QWebEngineContextMenuData;
typedef struct QPoint QPoint;
typedef struct QUrl QUrl;
typedef struct QWebEngineContextMenuData QWebEngineContextMenuData;
QWebEngineContextMenuData* QWebEngineContextMenuData_new();
QWebEngineContextMenuData* QWebEngineContextMenuData_new2(QWebEngineContextMenuData* other);
void QWebEngineContextMenuData_operatorAssign(QWebEngineContextMenuData* self, QWebEngineContextMenuData* other);
bool QWebEngineContextMenuData_isValid(const QWebEngineContextMenuData* self);
QPoint* QWebEngineContextMenuData_position(const QWebEngineContextMenuData* self);
struct miqt_string QWebEngineContextMenuData_selectedText(const QWebEngineContextMenuData* self);
struct miqt_string QWebEngineContextMenuData_linkText(const QWebEngineContextMenuData* self);
QUrl* QWebEngineContextMenuData_linkUrl(const QWebEngineContextMenuData* self);
QUrl* QWebEngineContextMenuData_mediaUrl(const QWebEngineContextMenuData* self);
int QWebEngineContextMenuData_mediaType(const QWebEngineContextMenuData* self);
bool QWebEngineContextMenuData_isContentEditable(const QWebEngineContextMenuData* self);
struct miqt_string QWebEngineContextMenuData_misspelledWord(const QWebEngineContextMenuData* self);
struct miqt_array /* of struct miqt_string */  QWebEngineContextMenuData_spellCheckerSuggestions(const QWebEngineContextMenuData* self);
int QWebEngineContextMenuData_mediaFlags(const QWebEngineContextMenuData* self);
int QWebEngineContextMenuData_editFlags(const QWebEngineContextMenuData* self);
const QMetaObject* QWebEngineContextMenuData_staticMetaObject();
void QWebEngineContextMenuData_delete(QWebEngineContextMenuData* self);